# hello-blinky-assignment

./: CMakeLists.txt  README.md  blink.c
